# spotify-mcp-py

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/spotify_mcp/: __init__.py  auth.py  oauth_server.py  server.py
