[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "spotify-mcp"
version = "1.0.0"
description = "MCP server for Spotify integration with PKCE authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "spotipy>=2.24.0",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "spotify_mcp.server:create_server"
